fixed photo going out of bounds

--- a/style.css
+++ b/style.css
@@ -37,6 +37,8 @@ body {
 .myphoto {
     flex: 1;
     max-width: 10rem;
+    min-width: 5rem;
+
     border: 2px solid LightSeaGreen;
     border-radius: 1rem;
     margin-left: 1rem;
